# PersonalityAI

./: README.md  personalityAI_git.ipynb  personalityAI_git_cleared_output.ipynb  personalityAI_git_edit.ipynb  pyproject.toml  requirements.txt  setup.py
experiments/: utils.py
personality/: Person.py  Persona.py  __init__.py  create.py
personality/experiments/: __init__.py  collectors.py
personalityai/: Person.py  __init__.py  persona.py
