[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personalityai"
version = "0.1.0"
description = "A Python package for creating AI personalities with multiple personas."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" } # Or { file = "LICENSE" } if you create a separate LICENSE file
keywords = ["ai", "persona", "llm", "agent", "personality"]
authors = [
  { name = "Ime Inyang", email = "alfiinynag@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tenacity>=8.0.0", # Based on the import in persona.py
    # Add any other external dependencies your code might have, e.g., for LLM client
    # "openai>=1.0.0", # Example if you use OpenAI client
]

[project.urls]
Homepage = "https://github.com/alfiinyang/PersonalityAI"
"Bug Tracker" = "https://github.com/alfiinyang/PersonalityAI/issues"
