[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personalityai"
version = "0.1.0"
description = "A Python package for creating AI personalities with multiple personas."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["ai", "persona", "llm", "agent", "personality"]
authors = [
  { name = "Ime Inyang", email = "alfiinyang@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tenacity>=8.0.0",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["personality*"]

[project.urls]
Homepage = "https://github.com/alfiinyang/PersonalityAI"
"Bug Tracker" = "https://github.com/alfiinyang/PersonalityAI/issues"
